--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <!-- {% include header.html %} -->
+		
+        {% include header.html %}
+		
         <title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -24,7 +26,7 @@
 
         </div><!-- /.container -->
         
-        <!-- {% include footer.html %} -->
+        {% include footer.html %}
 		<footer>
     		<ul>
         		<li><a href="mailto:stephan@broecker.eu">email</a></li>
