--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,13 @@
         	</div><!-- /.container -->
         
 	</body>
+	
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.poptrox.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/exif.js"></script>
+	<script src="assets/js/main.min.js"></script>
 		
-        {% include footer.html %}
-
 </html>
