--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
-        {% include header.html %}
-		
-        <title>{{ page.title }}</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+		<title>{{ site.title }}</title>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+		<link rel="stylesheet" href="assets/css/main.css"/>
+		{% if site.google_analytics %}
+		<script>
+    			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    			ga('create', '{{ site.google_analytics }}', 'auto');
+    			ga('send', 'pageview');
+		</script>
 	</head>
     
 	<body>
