--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -204,12 +204,12 @@
 		}
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color: inherit; text-decoration: none;	}
 
-	h1 { font-size: 220%; font-style: normal; font-variant: normal; font-weight: 700; line-height: 248%; }
-	h2 { font-size: 160%; font-style: normal; font-variant: normal; font-weight: 700; line-height: 182%; }
-	h3 { font-size: 120%; font-style: normal; font-variant: normal; font-weight: 700; line-height: 138%; }
-	h4 { font-size: 100%; font-style: normal; font-variant: normal; font-weight: 700; line-height: 116%; }
-	h5 { font-size: 90%; font-style: normal; font-variant: normal; font-weight: 700; line-height: 100%; }
-	h6 { font-size: 70%; font-style: normal; font-variant: normal; font-weight: 700; line-height: 80%; }
+	h1 { font-size: 220%; font-style: normal; font-variant: normal; font-weight: 700; }
+	h2 { font-size: 160%; font-style: normal; font-variant: normal; font-weight: 700; }
+	h3 { font-size: 120%; font-style: normal; font-variant: normal; font-weight: 700; }
+	h4 { font-size: 100%; font-style: normal; font-variant: normal; font-weight: 700; }
+	h5 { font-size: 90%; font-style: normal; font-variant: normal; font-weight: 700;  }
+	h6 { font-size: 70%; font-style: normal; font-variant: normal; font-weight: 700;  }
 
 	@media screen and (max-width: 736px) {
 		h2 { font-size: 1.2em; }
@@ -236,7 +236,7 @@
 		margin: 0 0 2em 0;
 		padding: 0.5em 0 0.5em 2em;
 	}
-	blockquote { font-size: 160%;	font-style: italic; font-variant: small-caps; font-weight: 400;	line-height: 180%; color: #2F4F4F; }
+	blockquote { font-size: 160%;	font-style: italic; font-variant: small-caps; font-weight: 400;	color: #2F4F4F; }
 
 	code {
 		background: #34363b;
@@ -251,7 +251,7 @@
 		-webkit-overflow-scrolling: touch;
 		margin: 0 0 2em 0;
 	}
-	pre { font-size: 120%; font-weight: 400; line-height: 135%; }
+	pre { font-size: 120%; font-weight: 400; }
 
 		pre code {
 			display: block;
