--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,6 @@
 	<script src="assets/js/skel.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/exif.js"></script>
-	<script src="assets/js/main.min.js"></script>
+	<script src="assets/js/main.js"></script>
 		
 </html>
