--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
-/* @import url(font-awesome.min.css); */
-/* @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic"); */
+@import url(font-awesome.min.css);
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
 
 /*
 	Multiverse by HTML5 UP
@@ -194,6 +194,7 @@
 	em, i { font-style: italic; }
 
 	p { margin: 0 0 2em 0; }
+	p { font-size: 120%; font-weight: 400; color: #4d8080; }
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
@@ -208,8 +209,8 @@
 	h2 { font-size: 160%; font-style: normal; font-variant: normal; font-weight: 700; }
 	h3 { font-size: 120%; font-style: normal; font-variant: normal; font-weight: 700; }
 	h4 { font-size: 100%; font-style: normal; font-variant: normal; font-weight: 700; }
-	h5 { font-size: 90%; font-style: normal; font-variant: normal; font-weight: 700;  }
-	h6 { font-size: 70%; font-style: normal; font-variant: normal; font-weight: 700;  }
+	h5 { font-size: 90%; font-style: normal; font-variant: normal; font-weight: 500;  }
+	h6 { font-size: 70%; font-style: normal; font-variant: normal; font-weight: 500;  }
 
 	@media screen and (max-width: 736px) {
 		h2 { font-size: 1.2em; }
@@ -282,13 +283,12 @@
 		text-align: right;
 	}
 
-p, ul { font-size: 120%; font-weight: 400; line-height: 150%; color: #4d8080; }
 
 nav ul, footer ul { font-size: 88%; font-family: Verdana, Geneva, sans-serif; padding: 0px; list-style: none; line-height: 100%; font-weight: bold; }
 nav ul li, footer ul li { display: inline; margin-right: 20px; }
 
 
-footer { border-top: 1px solid #d5d5d5; font-size: 85%; }
+footer { border-top: 1px solid #d5d5d5; font-size: 88%; }
 
 
 
@@ -687,9 +687,9 @@ footer { border-top: 1px solid #d5d5d5; font-size: 85%; }
 
 /* List */
 
-	ul { font-size: 120%; font-weight: 400; line-height: 150%; color: #4d8080; }
+	ul { font-size: 120%; font-weight: 400; color: #4d8080; }
 
-	nav ul, footer ul { font-size: 88%; font-family: Verdana, Geneva, sans-serif; padding: 0px; list-style: none; line-height: 100%; font-weight: bold; }
+	nav ul, footer ul { font-size: 88%; font-family: Verdana, Geneva, sans-serif; padding: 0px; list-style: none; font-weight: bold; }
 	nav ul li, footer ul li { display: inline; margin-right: 20px; }
 
 	ol { list-style: decimal; margin: 0 0 2em 0; padding-left: 1.25em; }
